# result.py

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: checks.yml  pypi.yml
src/result/: __init__.py
tests/: test_result.py
