[project]
name = "result"
version = "0.1.0"
description = ""
authors = [
    {name = "Viventio",email = "viventio.software@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

